--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/datenschutzbelehrung.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/datenschutzbelehrung.cshtml
@@ -10,7 +10,7 @@
         color:red;
     }
 </style>
-<div class="container bg-white shadow-lg p-3 mb-5 bg-body-tertiary rounded">
+<div class="container bg-white shadow-lg p-3 my-4 mb-5 bg-body-tertiary rounded">
 
 <h2>Datenschutzerklärung</h2>
 <h3 id="dsg-general-intro"></h3>
