--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/Components/Footer/Default.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/Components/Footer/Default.cshtml
@@ -102,4 +102,6 @@
 
     <hr style="height: 3px;">
     <h2><a href="@Url.Action("Impressum", "Home")">Impressum</a></h2>
+    <h2><a href="@Url.Action("datenschutzbelehrung", "Home")">Datenschutzerklärung</a></h2>
+    <h2><a href="@Url.Action("AGB", "Home")">AGB</a></h2>
 </div>
