--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Impressum.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Impressum.cshtml
@@ -3,7 +3,7 @@
 
 }
 
-<div class="container bg-white shadow-lg p-3 mb-5 bg-body-tertiary rounded">
+<div class="container bg-white shadow-lg my-4 p-3 mb-5 bg-body-tertiary rounded">
     <div class="text-center">
         <h1><strong>@ViewData["Title"] </strong></h1>
     </div>
