--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Manage/Adresse.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Manage/Adresse.cshtml
@@ -267,20 +267,20 @@
             </div>
             
             <div class="form-floating mb-3">
-                <input asp-for="Input.Rechnun_Postleitzahl" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Rechnun Postleitzahl" />
+                <input asp-for="Input.Rechnun_Postleitzahl" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Rechnung Postleitzahl" />
                 <label asp-for="Input.Rechnun_Postleitzahl" class="form-label"></label>
                 <span asp-validation-for="Input.Rechnun_Postleitzahl" class="text-danger"></span>
             </div>
 
             <div class="form-floating mb-3">
-                <input asp-for="Input.Rechnun_Stadt" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Rechnun Stadt" />
+                <input asp-for="Input.Rechnun_Stadt" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Rechnung Stadt" />
                 <label asp-for="Input.Rechnun_Stadt" class="form-label"></label>
                 <span asp-validation-for="Input.Rechnun_Stadt" class="text-danger"></span>
             </div>
 
 
             <div class="form-floating mb-3">
-                <input asp-for="Input.Rechnun_Straße" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Rechnun Straße" />
+                <input asp-for="Input.Rechnun_Straße" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Rechnung Straße" />
                 <label asp-for="Input.Rechnun_Straße" class="form-label"></label>
                 <span asp-validation-for="Input.Rechnun_Straße" class="text-danger"></span>
             </div>
